--- a/dw_root/Dockerfile
+++ b/dw_root/Dockerfile
@@ -2,16 +2,26 @@
 FROM python:3.9.7-alpine
 
 # set work directory
-WORKDIR /c/Users/rfrolov/Documents/work/digital-sign-storage
+WORKDIR usr/src/digital-sign-storage
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+# install psycopg2 dependencies
+RUN apk update \
+    && apk add postgresql-dev gcc python3-dev musl-dev
+
 # install dependencies
-RUN pip install --upgrade pip
+RUN pip3 install --upgrade pip
 COPY ./requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
+
+# copy entrypoint.sh
+COPY ./entrypoint.sh .
 
 # copy project
 COPY . .
+
+# run entrypoint.sh
+ENTRYPOINT ["/usr/src/digital-sign-storage/entrypoint.sh"]
