--- a/dw_root/requirements.txt
+++ b/dw_root/requirements.txt
@@ -1,19 +1,4 @@
-autopep8==1.5.7
-beautifulsoup4==4.9.3
 Django==3.2.4
-django-appconf==1.0.4
-django-bootstrap-form==3.4
-django-bootstrap4-form==4.0.1
-django-crispy-forms==1.12.0
-django-filter==2.4.0
-django-timezone-field==4.1.2
-django-user-accounts==3.0.4
-djangorestframework==3.12.4
-docxtpl==0.11.5
-flake8==3.9.2
-hiredis==2.0.0
-Pillow==8.2.0
-python-dateutil==2.8.1
-python-docx==0.8.11
-requests==2.25.1
-simplejson==3.17.2
+django-filter
+psycopg2-binary==2.8.5
+python-dateutil
