--- a/dw_root/.env.dev
+++ b/dw_root/.env.dev
@@ -1,6 +1,6 @@
 DEBUG=1
 SECRET_KEY=foo
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 192.168.65.176 192.168.65.179 [::1]
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=digital_sign_storage_dev
 SQL_USER=rfrolov
